examples/errors/throw_error.molt
import errors from "std:errors"

fn load_config(path) = {
  errors.throw(errors.error("config file not found", record { path: path }))
}

load_config("settings.json")
